--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -2,3 +2,23 @@
   max-height: 35vh;
   overflow: hidden;
 }
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+.game {
+  max-width: 600px;
+  margin: 5% auto;
+}
+.grid {
+  border: thin solid gray; line-height: 0;  
+}
+.cell {
+  border: thin solid gray; display: inline-block;
+  height: 80px; max-height: 15vh;
+}
+.message {
+  float: left; color: #666; margin-top: 1rem;
+}
+.button {
+  float: right; margin-top: 1rem;
+}
